# waylaunch

./: .gitignore  CMakeLists.txt  README.md
config/: waylaunch.toml
doc/: waylaunch.1
docs/: CONTENT_SEARCH.md  CONTENT_SEARCH_STORE.md  DESIGN.md  POWER_MANAGER.md
include/waylaunch/: app_launcher.h  calculator.h  clipboard.h  config.h  launcher_ui.h  renderer.h  subprocess.h  wayland_core.h
include/waylaunch/content/: config.h  control.h  extractor.h  fs_watcher.h  indexer.h  store.h
include/waylaunch/power/: confirm_dialog.h  confirm_dialog_renderer.h  power_action.h  power_action_backend.h  power_glyphs.h  power_input_controller.h  power_manager.h  power_renderer.h  power_state_machine.h
include/waylaunch/switcher/: app_group.h  app_switcher_manager.h  switcher_input_controller.h  switcher_renderer.h  switcher_state_machine.h  toplevel_backend.h  wlr_toplevel_backend.h
protocols/: wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-screencopy-unstable-v1.xml
schema/: fts5.sql
src/: main.cpp
src/browser/: batch_rename.cpp  drag_drop.cpp  file_model.cpp  file_ops.cpp  tags.cpp
src/config/: config.cpp
src/content/: config.cpp  control.cpp  extractor.cpp  fs_watcher.cpp  indexer.cpp  store.cpp  waylaunchctl_main.cpp  waylaunchd_main.cpp
src/core/: keyboard_shortcuts.cpp  wayland_core.cpp
src/modes/: app_launcher.cpp  calculator.cpp  clipboard.cpp  content_search.cpp  file_search.cpp
src/power/: confirm_dialog_renderer.cpp  power_action_backend.cpp  power_glyphs.cpp  power_input_controller.cpp  power_manager.cpp  power_renderer.cpp  power_state_machine.cpp
src/search/: finder_search.cpp  search_manager.cpp  subprocess.cpp
src/switcher/: app_switcher_manager.cpp  switcher_input_controller.cpp  switcher_renderer.cpp  switcher_state_machine.cpp  wlr_toplevel_backend.cpp
src/ui/: info_panel.cpp  launcher_ui.cpp  preview.cpp  renderer.cpp  sidebar.cpp  sort_menu.cpp  status_bar.cpp  tabs.cpp  toolbar.cpp  view_modes.cpp
tests/: CMakeLists.txt  app_switcher_test.cpp  confirm_dialog_test.cpp  content_bench.cpp  content_extractor_test.cpp  content_freshness_test.cpp  content_indexer_test.cpp  content_store_test.cpp  power_action_backend_test.cpp  power_manager_test.cpp  power_state_machine_test.cpp  test_file_model.cpp  test_file_ops.cpp  test_framework.h  test_keyboard_shortcuts.cpp  test_main.cpp  test_search.cpp  test_tags.cpp  test_ui_components.cpp
